testdata/baselines/reference/submodule/conformance/paramTagOnFunctionUsingArguments.errors.txt
a.js(19,9): error TS2554: Expected 0 arguments, but got 3.


==== decls.d.ts (0 errors) ====
    declare function factory(type: string): {};
==== a.js (1 errors) ====
    /**
     * @param {string} first
     */
    function concat(/* first, second, ... */) {
      var s = ''
      for (var i = 0, l = arguments.length; i < l; i++) {
        s += arguments[i]
      }
      return s
    }
    
    /**
     * @param {...string} strings
     */
    function correct() {
        arguments
    }
    
    correct(1,2,3) // oh no
            ~~~~~
!!! error TS2554: Expected 0 arguments, but got 3.
    